--- a/dockerfiles/tetris-deploy/Dockerfile
+++ b/dockerfiles/tetris-deploy/Dockerfile
@@ -1,4 +1,7 @@
+# Obraz z deploy serverem
 from dep-img
-COPY ./entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+
+
 ENTRYPOINT [ "/entrypoint.sh" ]
